--- a/android/build.gradle
+++ b/android/build.gradle
@@ -46,7 +46,10 @@ repositories {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':capacitor-android')
+    implementation 'androidx.appcompat:appcompat:1.3.0'
     testImplementation "junit:junit:$junitVersion"
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
+    implementation 'com.yandex.android:mobmetricalib:5.0.1'
+    implementation 'com.android.installreferrer:installreferrer:2.2'
 }
