--- a/.github/workflows/beta.yml
+++ b/.github/workflows/beta.yml
@@ -16,5 +16,5 @@ jobs:
       - uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{ secrets.NPM_TOKEN }}
-          package: dist/package.json
+          package: package.json
           tag: beta
