--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "capacitor-appmetrica",
-  "version": "1.0.0-beta.5",
+  "version": "1.0.0",
   "description": "Appmetrica capacitor plugin",
   "main": "dist/plugin.cjs.js",
   "module": "dist/esm/index.js",
